Fixes a slight issue with image and text alignment

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -12,13 +12,18 @@
   border-radius: 10%;
   border: 5px solid black;
   text-align: center;
+  margin: 0 10px;
 }
 .special-title {
   font-style: italic;
-  font-size: 12px;
+  font-size: 10px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 .card img {
-  display: block;
-  margin: auto;
-  margin-bottom: 25px;
+  border: 1px solid black;
+  display: inline-block;
+  float: left;
+  clear: left;
+  margin-bottom: 15px;
 }
